--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MediasoftCalc</string>
+    <string name="expression">Выражение: </string>
+    <string name="result">Результат: </string>
+    <string name="no_calcs">История вычислений пуста</string>
 </resources>
